--- a/css/custom.css
+++ b/css/custom.css
@@ -1,68 +1,1 @@
-.custom-bg-dark {
-    background-color: #1d1d1d;
-}
-
-body {
-    font-family: 'Lato', sans-serif;
-}
-
-header {
-    background-image: url('/assets/main_banner.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: top center;
-}
-
-h1 span {
-    display: block;
-    text-align: left;
-}
-
-.about-picture {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-}
-
-.about-picture > div {
-    color: white;
-}
-
-.about-picture div h4 {
-    font-weight: bold;
-}
-
-.about-picture div > div {
-    font-size: 0.6rem;
-}
-
-.call-to-action {
-    display: flex;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    font-weight: bold;
-    flex-wrap: wrap;
-}
-
-.call-to-action-left, .call-to-action-right {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    color: white;
-    font-size: 1.5rem;
-}
-
-.call-to-action-right {
-    justify-content: flex-end;
-}
-
-.big-number {
-    font-size: 4rem;
-    font-weight: bold;
-}
-
-.call-to-buttons .btn {
-    border-radius: 0 !important;
-}
+.custom-bg-dark{background-color:#1d1d1d}body{font-family:Lato,sans-serif;font-size:1rem;color:#7e886b}header{background-image:url(../assets/main_banner.png);background-size:cover;background-repeat:no-repeat;background-position:top center;position:relative;overflow:hidden}.baner{border:0 solid #00f;position:relative}.navbar-brand{margin-right:5rem}.nav-link{color:#fff}.slogans{display:flex;flex-direction:column;align-items:flex-start;justify-content:space-between;height:100%}h1 span{display:block;text-align:left;font-size:2rem;width:100%;line-height:2.5rem}h2{text-transform:uppercase;font-weight:700}.about-picture{position:absolute;bottom:5%;width:30%;right:25%;padding:1rem;z-index:0}.about-picture-mobile{display:none}.about-picture>div{color:#fff}.about-picture-info h4{font-weight:700}.about-picture-info div{font-size:.6rem}header>.picture-source{margin-top:1rem;text-transform:uppercase;border:0 solid red;font-size:.5rem;position:absolute;right:0;bottom:0;width:100%;color:#fff;text-align:right;padding-right:.5rem;z-index:0}.call-to-buttons{display:flex;flex-wrap:wrap;justify-content:flex-start;align-items:baseline;margin-bottom:2rem}.call-to-buttons div{text-align:left}.call-to-buttons>div:nth-child(1)>a.btn{background:#0056a7;border:none}.call-to-buttons>div:nth-child(2)>a.btn{background:#fff;border:none}.intro .call-to-buttons>div>a.btn{border:none;background:#0056a7}.call-to-buttons a{color:#fff;text-decoration:none;font-weight:400}.intro .call-to-buttons,.see-more .call-to-buttons{justify-content:left;margin:2rem}.intro .call-to-buttons a,.see-more .call-to-buttons{color:inherit;font-weight:700}.call-to-buttons .btn{border-radius:50%!important;height:2rem;width:2rem;padding-left:0!important;padding-right:0!important}iframe{width:100%}.intro{padding:5rem;display:flex;flex-direction:column;justify-content:space-between;border:1px #7e886b solid;border-radius:5%}.intro-krs{color:#d6363c;font-weight:700;font-size:2rem}.intro-text>div{padding-top:.5rem;padding-bottom:.5rem;font-size:1.3rem}.who-supports .intro-text{display:flex;flex-direction:column}.who-supports .intro-text div{font-size:1rem;width:100%}.banners{display:flex;align-items:center}.banners>div{width:50%;margin:1rem}.banners img{width:100%}.how-to-buttons{display:flex;flex-wrap:wrap;align-items:baseline;width:100%;justify-content:center;overflow:hidden;border:0 solid red;margin-top:2rem}.how-to-buttons a{text-decoration:none!important}.how-to-buttons .comment{text-align:left;color:#7e886b;font-size:1rem;padding-top:1rem}.how-to-buttons>div{width:25%;padding:1rem;text-align:center}.how-to-buttons img{width:100%}.testimonies>div{margin-bottom:1rem;margin-top:1rem;font-size:1rem;color:#d6363c;font-style:italic}.testimonies>div span{font-weight:700;display:block;color:#7e886b;width:100%;font-style:normal;text-align:right}.quote-icon{width:12%;float:left;padding-bottom:1rem;padding-right:1rem}.thank-you{font-weight:400;color:#7e886b;font-style:normal;margin-top:2rem}.photos{display:flex;align-items:center;flex-wrap:wrap;align-content:flex-start}.photos img{padding:.5rem;width:50%}.list-group{list-style-type:unset}.list-group li{border:none;border-radius:0!important;border-bottom:0 solid grey;font-size:1.5rem;padding-left:0}.see-more{margin-top:2rem}.see-more .call-to-buttons{justify-content:flex-start}.see-more .call-to-buttons a{color:#7e886b}footer.bg-dark{background-color:#7e886b!important;background:#7e886b}.custom-footer>div{width:33%}footer .row>div{color:#fff;font-size:1rem}footer .row>div span{display:block}footer a{color:#fff;text-decoration:none}footer a:hover{color:#d6363c}.contact-me{text-align:right}.only-mobile{display:none}.only-desktop{display:inherit}.icons{margin-top:2rem;display:flex;flex-wrap:wrap;justify-content:flex-end;align-items:center;align-content:center}.icons a{width:20%}@media (max-width:991.98px){header{background-image:url(../assets/main_banner_mobile2.png);background-position:top center;overflow:hidden}.only-mobile{display:inherit}.only-desktop{display:none}.about-picture{width:100%;display:none}.about-picture-mobile{display:inherit;border:0 solid green;position:relative;width:100%;right:auto;margin-top:2rem}.about-picture>div{max-width:100%;margin-top:2rem;text-align:right}.quote-icon{width:10%}.who-supports .intro-text div{font-size:1rem;width:100%}.baner{position:unset}.custom-footer>div{width:100%;text-align:right;margin-bottom:2rem}.intro{border:none}.icons a{width:15%}}@media (max-width:575.98px){.intro-text>div,body{font-size:1rem}header{background-image:url(../assets/main_banner_mobile3.png);background-position:top center;background-position:25% 65%}.intro{padding:0;border:none;display:flex;flex-direction:column;justify-content:space-between;border:none;overflow:hidden;border-radius:0}h1{margin-bottom:5rem}.intro .call-to-buttons{justify-content:flex-start}.intro-krs{font-size:1.5rem}.banners{padding:0}.banners>div{margin:0;margin-bottom:1rem}.jak-przekazac{padding:0}.how-to-buttons>div{width:100%;padding:1rem}.who-supports .intro-text{margin:0;padding:0}.photos img{width:50%}.intro .call-to-buttons{width:100%}.banners{flex-wrap:wrap;justify-content:center}.banners div{width:100%}.custom-footer>div{width:100%;text-align:right}.custom-footer{flex-direction:column-reverse}.about-picture{width:100%}.who-supports .intro-text{display:flex;flex-direction:column;align-items:center}.who-supports .intro-text div{font-size:inherit;width:100%}.about-picture{width:100%}.about-picture-mobile{display:inherit;border:0 solid #ff0}.baner{position:unset}.slogans{height:70%}.icons a{width:12%;margin:1rem}}@media (width:1024px){.who-supports .row>div{width:100%}header{background-image:url(../assets/main_banner_mobile2.png);background-position:top center;overflow:hidden}.testimonies>div{font-size:1.5rem}.testimonies>div span{font-weight:700;display:block;color:#7e886b;width:100%;text-align:right}.quote-icon{width:5%}.about-picture{width:100%;right:0}}
